// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should currenctly render expenses summary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling
     
    $2.35
  </h1>
</div>
`;

exports[`Should currenctly render expenses summary with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    4
     
    expenses
     totalling
     
    $10.00
  </h1>
</div>
`;
